----------
v4.2.0-git
----------

[jan] Add recurrence controls to basic view (Request #11545).
[mjr] Add button for creating sub-task from task view (Request #12309).
[mjr] Add ability to return to existing search results after navigating to a
      task (Request #12879).
[jan] Make shares table compatible with Oracle.
[mjr] Add API support for multiple tasklists via ActiveSync.


------
v4.1.4
------

[jan] Update Danish translation (Erling Preben Hansen <erling@eph.dk>).
[jan] Don't return future tasks from cost objects API.


------
v4.1.3
------

[jan] SECURITY: Fix XSS vulnerabilities when deleting task lists.
[jan] Fix updating alarm if completing a task recurrence.
[jan] Fix editing tasks via CalDAV (Bug #12745).


------
v4.1.2
------

[jan] Fix highlighting task type tabs in list view.
[jan] Fix fatal errors if DAV support is disabled (Bug #12481).
[mjr] Fix requesting changes by modification sequence (Bug #12507, Thomas
      Jarosch <thomas.jarosch@intra2net.com>).


------
v4.1.1
------

[jan] Display CalDAV URL of system tasklists (Bug #12342).
[mjr] Only query Horde_History when it's required.
[jan] Fix system tasklist listing via WebDAV.
[rla] Add system tasklist support for Nag CalDAV access (Request #12342).
[jan] Fix task description tooltip (Bug #12421).
[mjr] Persist the tasklist and parent when creating a new task and using "Save
      and New" (Bug #12400).
[mjr] Fix tag browsing of shared tasklists (Bug #12405).
[mjr] Fix importing VTODOs containing RELATED-TO fields (Bug #12355).
[mjr] Add API methods for using history modification sequences.


------
v4.1.0
------

[jan] Don't include external tasks in listTasks() API results.


-----------
v4.1.0beta2
-----------

[jan] Fix incorrect dependencies.


-----------
v4.1.0beta1
-----------

[jan] Add CalDAV server support (Request #4267).
[jan] Update design to closer match the Horde 5 UI.


------
v4.0.3
------

[jan] Fix recurring tasks in Kolab driver (Thomas Jarosch