@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Add script to import tasks from Open-Xchange.
 [jan] Add recurrence controls to basic view (Request #11545).
 [mjr] Add button for creating sub-task from task view (Request #12309).
 [mjr] Add ability to return to existing search results after navigating to a
